# TicTacToe

TTT/: CMakeLists.txt
TTT/src/: alphabeta.c  alphabeta.h  jeu.c  jeu.h  main.c
